fix container height on small screens, update resume

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -49,7 +49,7 @@ $orange: #ff6b4a;
 ==================================== */
 
 .container {
-  height: 100vh;
+  min-height: 100vh;
   font-family: "Clear Sans", sans-serif;
   font-weight: 300;
   display: grid;
@@ -92,7 +92,8 @@ $orange: #ff6b4a;
 }
 
 .main {
-  grid-area: main;
+	grid-area: main;
+	overflow: hidden;
 }
 
 .main-content {
@@ -138,6 +139,7 @@ $orange: #ff6b4a;
 ==================================== */
 
 footer {
+	margin-bottom: .5rem;
   color: $white;
   text-shadow: 2px 3px 6px rgba(0, 0, 0, 0.6);
   text-align: center;
